# thumbnail_maker

./: README.md  generateThumbnail.js  genthumb.js  img_upload.js  index.html  mytemp.json  package-lock.json  package.json  pyproject.toml  thumbnail.json  thumbnailRenderer.js
.github/workflows/: generate-thumbnail.yml
_old_python/: generateThumbnail.py  genthumb.py  main_gui.py  thumbnailRenderer.py
tests/: test_generate_thumbnail.py
thumbnail_maker/: __init__.py  __main__.py  cli.py  cli_new.py  gui.py  renderer.py  upload.py
thumbnail_maker/gui/: __init__.py  dsl_manager.py  font_utils.py  handlers.py  main_window.py  preview_thread.py  widgets.py
