[project]
name = "thumbnail-maker"
version = "0.1.0"
description = "썸네일 생성 도구 - Pillow와 PySide6 기반"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "pyside6>=6.10.0",
    "fonttools>=4.47.0",
    "requests>=2.31.0",
]

[project.scripts]
thumbnail-gui = "thumbnail_maker.gui:main"
generate-thumbnail = "thumbnail_maker.cli:main"
genthumb = "thumbnail_maker.cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["thumbnail_maker"]
